// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test for missions components Take snapshot from the element 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class=""
      >
        <div
          class="nav-header justify-content-around ms-auto nav"
        >
          <div
            class="container"
          >
            <div
              class="row"
            >
              <div
                class="d-flex flex-row aling-item-center text-center col"
              >
                <img
                  alt="logoPlanet"
                  class="nav-logoPlanet"
                  src="logo-planet.png"
                />
                <h2
                  class="m-0 pt-1"
                >
                  Space Traveler\`s Hub
                </h2>
              </div>
              <div
                class="d-flex flex-row aling-item-center justify-content-around col"
              >
                <a
                  aria-current="page"
                  class="text-decoration-none active"
                  href="/"
                >
                   Rockets 
                </a>
                <a
                  class="text-decoration-none"
                  href="/missions"
                >
                   Missions
                </a>
                <a
                  class="text-decoration-none"
                  href="/profile"
                >
                  My Profile
                </a>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="container"
      >
        <div
          class="justify-content-center align-items-center col"
        >
          <h2>
            Missons
          </h2>
          <table
            class="table table-striped table-bordered"
          >
            <thead>
              <tr>
                <th>
                  Missions
                </th>
                <th>
                  Description
                </th>
                <th>
                  Status
                </th>
                <th>
                  Action
                </th>
              </tr>
            </thead>
            <tbody />
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <main
      class=""
    >
      <div
        class="nav-header justify-content-around ms-auto nav"
      >
        <div
          class="container"
        >
          <div
            class="row"
          >
            <div
              class="d-flex flex-row aling-item-center text-center col"
            >
              <img
                alt="logoPlanet"
                class="nav-logoPlanet"
                src="logo-planet.png"
              />
              <h2
                class="m-0 pt-1"
              >
                Space Traveler\`s Hub
              </h2>
            </div>
            <div
              class="d-flex flex-row aling-item-center justify-content-around col"
            >
              <a
                aria-current="page"
                class="text-decoration-none active"
                href="/"
              >
                 Rockets 
              </a>
              <a
                class="text-decoration-none"
                href="/missions"
              >
                 Missions
              </a>
              <a
                class="text-decoration-none"
                href="/profile"
              >
                My Profile
              </a>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="container"
    >
      <div
        class="justify-content-center align-items-center col"
      >
        <h2>
          Missons
        </h2>
        <table
          class="table table-striped table-bordered"
        >
          <thead>
            <tr>
              <th>
                Missions
              </th>
              <th>
                Description
              </th>
              <th>
                Status
              </th>
              <th>
                Action
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test for missions components Take snapshot from the element 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class=""
      >
        <div
          class="nav-header justify-content-around ms-auto nav"
        >
          <div
            class="container"
          >
            <div
              class="row"
            >
              <div
                class="d-flex flex-row aling-item-center text-center col"
              >
                <img
                  alt="logoPlanet"
                  class="nav-logoPlanet"
                  src="logo-planet.png"
                />
                <h2
                  class="m-0 pt-1"
                >
                  Space Traveler\`s Hub
                </h2>
              </div>
              <div
                class="d-flex flex-row aling-item-center justify-content-around col"
              >
                <a
                  aria-current="page"
                  class="text-decoration-none active"
                  href="/"
                >
                   Rockets 
                </a>
                <a
                  class="text-decoration-none"
                  href="/missions"
                >
                   Missions
                </a>
                <a
                  class="text-decoration-none"
                  href="/profile"
                >
                  My Profile
                </a>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="container"
      >
        <div
          class="justify-content-center align-items-center col"
        >
          <h2>
            Missons
          </h2>
          <table
            class="table table-striped table-bordered"
          >
            <thead>
              <tr>
                <th>
                  Missions
                </th>
                <th>
                  Description
                </th>
                <th>
                  Status
                </th>
                <th>
                  Action
                </th>
              </tr>
            </thead>
            <tbody />
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <main
      class=""
    >
      <div
        class="nav-header justify-content-around ms-auto nav"
      >
        <div
          class="container"
        >
          <div
            class="row"
          >
            <div
              class="d-flex flex-row aling-item-center text-center col"
            >
              <img
                alt="logoPlanet"
                class="nav-logoPlanet"
                src="logo-planet.png"
              />
              <h2
                class="m-0 pt-1"
              >
                Space Traveler\`s Hub
              </h2>
            </div>
            <div
              class="d-flex flex-row aling-item-center justify-content-around col"
            >
              <a
                aria-current="page"
                class="text-decoration-none active"
                href="/"
              >
                 Rockets 
              </a>
              <a
                class="text-decoration-none"
                href="/missions"
              >
                 Missions
              </a>
              <a
                class="text-decoration-none"
                href="/profile"
              >
                My Profile
              </a>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="container"
    >
      <div
        class="justify-content-center align-items-center col"
      >
        <h2>
          Missons
        </h2>
        <table
          class="table table-striped table-bordered"
        >
          <thead>
            <tr>
              <th>
                Missions
              </th>
              <th>
                Description
              </th>
              <th>
                Status
              </th>
              <th>
                Action
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test for missions components Take snapshot from the element 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="m-0 p-0"
      />
    </div>
  </body>,
  "container": <div>
    <ul
      class="m-0 p-0"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
